[gd_scene load_steps=4 format=3 uid="uid://bpddq80asbpak"]

[ext_resource type="Script" path="res://scenes/props/science/electronics_lab/component/aux_cable/aux_cable.gd" id="1_wfp7h"]
[ext_resource type="PackedScene" uid="uid://c15ijkmijer6i" path="res://scenes/props/science/electronics_lab/component/aux_cable/plug_input.tscn" id="2_uuekr"]
[ext_resource type="PackedScene" uid="uid://bedbqprh05t0t" path="res://scenes/props/science/electronics_lab/component/aux_cable/plug_output.tscn" id="3_gktut"]

[node name="Wire" type="Node3D"]
script = ExtResource("1_wfp7h")

[node name="PlugInput" parent="." instance=ExtResource("2_uuekr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)

[node name="PlugOutput" parent="." instance=ExtResource("3_gktut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)

[connection signal="released" from="PlugInput" to="." method="_on_plug_input_released"]
[connection signal="snapped_to" from="PlugInput" to="." method="_on_plug_input_snapped_to"]
[connection signal="released" from="PlugOutput" to="." method="_on_plug_output_released"]
[connection signal="snapped_to" from="PlugOutput" to="." method="_on_plug_output_snapped_to"]
